tests/baselines/reference/project/visibilityOfTypeUsedAcrossModules2/amd/visibilityOfTypeUsedAcrossModules2.errors.txt
main.ts(2,21): error TS6053: File 'nonExistingFile1.ts' not found.
main.ts(3,21): error TS6053: File 'nonExistingFile2.ts' not found.


==== main.ts (2 errors) ====
    /// <reference path="main.ts" />
    /// <reference path="nonExistingFile1.ts" />
                        ~~~~~~~~~~~~~~~~~~~~~
!!! File 'nonExistingFile1.ts' not found.
    /// <reference path="nonExistingFile2.ts" />
                        ~~~~~~~~~~~~~~~~~~~~~
!!! File 'nonExistingFile2.ts' not found.